[package]
name = "twir-bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
handlebars = "4.2"
regex = "1"
serde_json = "1.0"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
