[package]
name = "twir-bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
git2 = "0.13"
handlebars = "4.2"
humantime = "2.1"
lazy_static = "1.4"
regex = "1"
serde_json = "1.0"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tempfile = "3.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
