[package]
name = "scrape_devto"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
