[package]
name = "scrape_lobsters"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrape_lobsters"
path = "src/lib.rs"

[[bin]]
name = "scrape_lobsters"
path = "src/bin/bin.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
