[package]
name = "scrape_lobsters"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrape_lobsters"
path = "src/lib.rs"

[[bin]]
name = "scrape_lobsters"
path = "src/bin/bin.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
