[package]
name = "scrape_reddit"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrape_reddit"
path = "src/lib.rs"

[[bin]]
name = "scrape_reddit"
path = "src/bin/bin.rs"

[dependencies]
chrono = { workspace = true }
roux = "2.2"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
