[package]
name = "twir-bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
bsky = { path = "../bsky" }
chrono = { workspace = true }
git2 = "0.17"
handlebars = "4.2"
humantime = "2.1"
lazy_static = "1.4"
regex = "1"
scrape_lobsters = { path = "../scrape_lobsters" }
scrape_reddit = { path = "../scrape_reddit" }
serde_json = { workspace = true }
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "658b6a7", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tempfile = "3.3"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
